# FutGame

./: .gitignore  .pre-commit-config.yaml  Doc.md  Dockerfile  Dockerfile.frontend  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  restart.sh  start.sh  webhook.py
app/: main.py  pyproject.toml  start.sh
backend/app/api/: main.py
backend/app/api/crud/: jogador_crud.py
backend/app/api/db/: db.py  models.py
backend/app/api/routes/: jogador_routes.py  webhook_routes.py
backend/app/api/schemas/: jogador_schemas.py
backend/app/api/webhook/: deploy.py
backend/app/config/: settings.py
backend/app/tests/: test_jogadores.py
frontend/fut-game/: README.md  package.json  vite.config.ts
static/: index.html
